--- a/wordplate/composer.json
+++ b/wordplate/composer.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "wordplate/acf": "^6.0",
         "wordplate/framework": "^6.3",
         "wordplate/plate": "^4.0"
     },
